--- a/Pages/Secured/Secure.cshtml
+++ b/Pages/Secured/Secure.cshtml
@@ -4,4 +4,5 @@
 }
 <div class="text-center">
     <h1 class="display-4">Welcome to Eon Soft Secure Page You've Authenticated Successfully!</h1>
+    <p>Please document all SAML Assertions within SAML Tracer</p>
 </div>
